--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,6 +12,23 @@
     android:background="@drawable/background_gradient"
     tools:context="com.example.ultim.radio5.MainActivity">
 
+
+    <eu.gsottbauer.equalizerview.EqualizerView
+        android:id="@+id/equalizerView"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="150dp"
+        app:animationDuration="6400"
+        app:barColor="@color/colorBuff"
+        app:barCount="102"
+        app:barWidth="7dp"
+        tools:background="@color/colorAccent"
+        tools:layout_width="50dp" />
 
     <ImageButton
         android:id="@+id/imageButtonPlay"
