--- a/app/src/main/res/layout/activity_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_navigation_drawer.xml
@@ -28,13 +28,13 @@
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
             android:layout_gravity="top"
-            android:gravity="left"
-            >
+            android:gravity="left">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
 
                 <ImageView
                     android:id="@+id/settings"
@@ -50,7 +50,8 @@
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:paddingLeft="7dp">
                 <TextView
                     android:id="@+id/menu_network_status_item"
                     android:text="Онлайн"
@@ -63,45 +64,77 @@
                     android:gravity="right"/>
             </LinearLayout>
 
-            
-            <TextView
-                android:id="@+id/nav_menu_university_list_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Список ВУЗов"></TextView>
 
-            <SearchView
-                android:id="@+id/nav_menu_search"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"/>
-            <ListView
-                android:id="@+id/menu_university_list_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="left"
-                />
-            <!--
             <LinearLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/online_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
-                <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/mSwitch"
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/ic_genres_button"/>
+                    <TextView
+                        android:id="@+id/nav_menu_university_list_textview"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Список ВУЗов"/>
+                </LinearLayout>
+
+                <SearchView
+                    android:id="@+id/nav_menu_search"
+                    xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"/>
+                <ListView
+                    android:id="@+id/menu_university_list_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:text="Night Mode" />
+                    android:gravity="left"
+                    android:layout_weight="1"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/offline_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/ic_genres_button"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Жанры музыки"/>
+                </LinearLayout>
+
+                <RadioGroup
+                    android:id="@+id/music_genres_group"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"/>
 
             </LinearLayout>
-            -->
         </LinearLayout>
 
-
-        </android.support.design.widget.NavigationView>
+    </android.support.design.widget.NavigationView>
 
 
 </android.support.v4.widget.DrawerLayout>
