--- a/app/src/main/res/layout/activity_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_navigation_drawer.xml
@@ -47,7 +47,7 @@
                     android:text="Настройки"/>
             </LinearLayout>
 
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -56,13 +56,15 @@
                     android:id="@+id/menu_network_status_item"
                     android:text="Онлайн"
                     android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"/>
+                    android:layout_width="wrap_content"
+                    android:paddingLeft="40dp"/>
                 <Switch
                     android:id="@+id/nav_menu_switch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="right"/>
-            </LinearLayout>
+                    android:layout_alignParentRight="true"
+                    />
+            </RelativeLayout>
 
 
             <LinearLayout
