--- a/app/src/main/res/layout/activity_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_navigation_drawer.xml
@@ -6,18 +6,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="start"
+    >
 
     <include
         layout="@layout/app_bar_navigation_drawer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        />
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="#303030"
         >
 <!--android:fitsSystemWindows="true"-->
         <LinearLayout
@@ -28,7 +31,8 @@
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
             android:layout_gravity="top"
-            android:gravity="left">
+            android:gravity="left"
+            >
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -95,7 +99,10 @@
                     xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"/>
+                    android:layout_gravity="right"
+                    android:iconifiedByDefault="false"
+                    android:showAsAction="always"
+                    />
                 <ListView
                     android:id="@+id/menu_university_list_view"
                     android:layout_width="match_parent"
