--- a/app/src/main/res/layout/university_listview_item.xml
+++ b/app/src/main/res/layout/university_listview_item.xml
@@ -13,6 +13,7 @@
         android:id="@+id/university_list_item_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="university"/>
+        android:text="university"
+        android:textColor="#E4E4E4"/>
 
 </LinearLayout>
