--- a/app/src/main/res/layout/university_listview_item.xml
+++ b/app/src/main/res/layout/university_listview_item.xml
@@ -6,13 +6,14 @@
     android:gravity="center_vertical">
     <ImageView
         android:id="@+id/university_list_item_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="27dp"
+        android:layout_height="27dp"
         android:src="@mipmap/ic_star_border"/>
     <TextView
         android:id="@+id/university_list_item_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="5dp"
         android:text="university"
         android:textColor="#E4E4E4"/>
 
