--- a/app/src/main/res/layout/some_fragment1.xml
+++ b/app/src/main/res/layout/some_fragment1.xml
@@ -8,6 +8,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="hello_blank_fragment1" />
+        android:text="hello_blank_fragment1"
+        android:textColor="#000000"/>
 
 </FrameLayout>
