--- a/app/src/main/res/layout/app_bar_navigation_drawer.xml
+++ b/app/src/main/res/layout/app_bar_navigation_drawer.xml
@@ -7,6 +7,7 @@
     tools:context="com.example.ultim.radio5.NavigationDrawerActivity">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/main_app_bar_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
