--- a/app/src/main/res/layout/content_navigation_drawer.xml
+++ b/app/src/main/res/layout/content_navigation_drawer.xml
@@ -1,38 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center_horizontal"
-    android:orientation="vertical"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.ultim.radio5.NavigationDrawerActivity"
-    tools:showIn="@layout/app_bar_navigation_drawer">
+    android:id="@+id/content_container">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/logo"
-        android:layout_gravity="center_horizontal"
-        android:paddingTop="50dp"/>
-
-    <ImageView
-        android:id="@+id/content_play_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/btn_play"
-        android:layout_gravity="center_horizontal"/>
-
-    <TextView
-        android:id="@+id/song_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="Исполнитель: Название трека"/>
-
-    <eu.gsottbauer.equalizerview.EqualizerView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-</LinearLayout>
+</FrameLayout>
