--- a/app/src/main/res/layout/some_fragment1.xml
+++ b/app/src/main/res/layout/some_fragment1.xml
@@ -10,7 +10,12 @@
     tools:showIn="@layout/app_bar_navigation_drawer"
     android:id="@+id/main_content">
 
+        <android.support.v7.widget.Toolbar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:title="Волгатех">
 
+        </android.support.v7.widget.Toolbar>
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
