--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,10 +3,14 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="android:windowNoTitle">true</item>
+
+
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">#303030</item>
+        <item name="android:textColorPrimary">#FFFFFF</item>
+        <item name="android:colorForeground">#303030</item>
+        <item name="android:colorBackground">#CED0CF</item>
     </style>
 
     <style name="CustomPlayButton">
@@ -32,12 +36,17 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textColorPrimary">#FFFFFF</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
     <style name="TextAppearance.NewTheme" parent="@android:style/TextAppearance.Theme">
         <item name="android:textColor">#ffffffff</item>
+    </style>
+
+    <style name="testTeheme" parent="NewTheme" >
+        <item name="colorPrimary">#FFFFFF</item>
+        <item name="colorAccent">#303030</item>
+        <item name="colorPrimaryDark">#303030</item>
     </style>
 
 </resources>
