--- a/app/src/main/res/layout/activity_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_navigation_drawer.xml
@@ -68,6 +68,7 @@
                     android:layout_width="wrap_content"
                     android:paddingLeft="23dp"/>
                 <Switch
+                    android:theme="@style/SwitchTheme"
                     android:id="@+id/nav_menu_switch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
