--- a/app/src/main/res/layout/some_fragment1.xml
+++ b/app/src/main/res/layout/some_fragment1.xml
@@ -1,33 +1,30 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center_horizontal"
-    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.ultim.radio5.NavigationDrawerActivity"
     tools:showIn="@layout/app_bar_navigation_drawer"
     android:id="@+id/main_content">
 
-        <android.support.v7.widget.Toolbar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:title="Волгатех">
-
-        </android.support.v7.widget.Toolbar>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:orientation="vertical">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/logo"
+            android:src="@drawable/logo_inactive"
             android:layout_gravity="center_horizontal"
             android:paddingTop="50dp"/>
 
         <ImageView
             android:id="@+id/content_play_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/btn_play"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:src="@drawable/btn_play_inactive"
             android:layout_gravity="center_horizontal"/>
 
         <TextView
@@ -36,9 +33,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="Исполнитель: Название трека"/>
-
-        <eu.gsottbauer.equalizerview.EqualizerView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
     </LinearLayout>
+
+    <eu.gsottbauer.equalizerview.EqualizerView
+        android:layout_width="wrap_content"
+        android:layout_height="140dp"
+        android:layout_alignParentBottom="true"/>
+</RelativeLayout>
