--- a/app/src/main/res/layout/custom_push.xml
+++ b/app/src/main/res/layout/custom_push.xml
@@ -21,8 +21,7 @@
         android:id="@+id/titlePush"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/image"
-        />
+        android:layout_toRightOf="@id/image" />
     <TextView
         android:textSize="13dp"
         android:textColor="#000"
@@ -31,6 +30,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/image"
-        android:layout_below="@id/titlePush"
-        />
+        android:layout_below="@id/titlePush" />
 </RelativeLayout>
