--- a/app/src/main/res/layout/some_fragment1.xml
+++ b/app/src/main/res/layout/some_fragment1.xml
@@ -5,38 +5,50 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.ultim.radio5.NavigationDrawerActivity"
-    tools:showIn="@layout/app_bar_navigation_drawer"
-    android:id="@+id/main_content">
-
+    android:id="@+id/main_content"
+    >
+<!--    tools:showIn="@layout/app_bar_navigation_drawer"-->
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/logo_inactive"
+            android:id="@+id/imageView"
+            android:layout_width="266dp"
+            android:layout_height="189dp"
             android:layout_gravity="center_horizontal"
-            android:paddingTop="50dp"/>
+            android:paddingTop="60dp"
+            android:src="@drawable/logo_inactive" />
 
         <ImageView
             android:id="@+id/content_play_btn"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
             android:src="@drawable/btn_play_inactive"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:paddingTop="30dp"/>
 
         <TextView
+            android:theme="@style/ToolBarStyle"
             android:id="@+id/song_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:layout_gravity="center_horizontal"
-            android:text="Исполнитель: Название трека"/>
+            android:text="Исполнитель: Название трека"
+            android:textSize="16dp"
+            android:paddingTop="50dp"/>
     </LinearLayout>
 
+    <!--android:layout_height="140dp"-->
     <eu.gsottbauer.equalizerview.EqualizerView
         android:layout_width="wrap_content"
-        android:layout_height="140dp"
-        android:layout_alignParentBottom="true"/>
+        android:layout_height="110dp"
+        android:layout_alignParentBottom="true"
+        />
 </RelativeLayout>
