--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,7 +64,7 @@
         <item name="colorPrimary">#FFFFFF</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">#FFFFFF</item>
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textColor">#727270</item>
         <item name="android:textColorPrimary">#727270</item>
     </style>
 
