--- a/app/src/main/res/layout/custom_push.xml
+++ b/app/src/main/res/layout/custom_push.xml
@@ -4,33 +4,61 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_push"
     android:layout_width="fill_parent"
-    android:layout_height="64dp"
+    android:layout_height="128dp"
     android:padding="10dp">
 
-    <ImageButton
-        android:src="@mipmap/ic_launcher"
+    <ImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/push_ic"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginRight="10dp" />
-    <TextView
-        android:textSize="13dp"
-        android:textColor="#000"
-        android:text="Testing"
-        android:id="@+id/titlePush"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true" />
+
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/image"
-        />
-    <TextView
-        android:textSize="13dp"
-        android:textColor="#000"
-        android:text="Testing is awecome"
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/image"
-        android:layout_below="@id/titlePush"
-        />
+        android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@+id/image"
+        android:layout_toEndOf="@+id/image">
+
+        <TextView
+            android:id="@+id/titlePush"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Исполнитель: Название трека"
+            android:textColor="#000"
+            android:textSize="13dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+        <ImageButton
+            android:id="@+id/button_close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/ic_close_black_16dp_2x" />
+
+        <ImageButton
+            android:id="@+id/button_play_push"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/pause_ic"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
+
+    </RelativeLayout>
+
+
+
+
+
+
 </RelativeLayout>
