fixed toolbar for each university fragment

--- a/app/src/main/res/layout/app_bar_navigation_drawer.xml
+++ b/app/src/main/res/layout/app_bar_navigation_drawer.xml
@@ -20,7 +20,7 @@
             android:theme="@style/ToolBarStyle"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             android:textAlignment="center"
-            android:text="Волгатех">
+            android:text="Home">
             </android.support.v7.widget.Toolbar>
 
 
