--- a/app/src/main/res/layout/fragment_radio.xml
+++ b/app/src/main/res/layout/fragment_radio.xml
@@ -47,6 +47,7 @@
 
     <!--android:layout_height="140dp"-->
     <eu.gsottbauer.equalizerview.EqualizerView
+        android:id="@+id/equalaizer"
         android:layout_width="wrap_content"
         android:layout_height="110dp"
         android:layout_alignParentBottom="true"
