--- a/app/src/main/res/layout-land/fragment_radio.xml
+++ b/app/src/main/res/layout-land/fragment_radio.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="60dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.ultim.radio5.NavigationDrawerActivity"
     android:id="@+id/main_content"
@@ -17,39 +18,44 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="266dp"
             android:layout_height="189dp"
             android:layout_gravity="center_horizontal"
-            android:paddingTop="60dp"
             android:src="@drawable/logo_inactive" />
 
-        <ImageView
-            android:id="@+id/content_play_btn"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:src="@drawable/play_button_selector"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            android:layout_gravity="center_horizontal"
-            android:paddingTop="30dp"/>
+            <ImageView
+                android:id="@+id/content_play_btn"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/play_button_selector" />
 
-        <TextView
-            android:theme="@style/ToolBarStyle"
-            android:id="@+id/song_name"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:layout_gravity="center_horizontal"
-            android:text="Исполнитель: Название трека"
-            android:textSize="16dp"
-            android:paddingTop="50dp"/>
+            <TextView
+                android:id="@+id/song_name"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center_horizontal"
+                android:paddingTop="20dp"
+                android:text="Исполнитель: Название трека"
+                android:textSize="16sp"
+                android:theme="@style/ToolBarStyle" />
+        </LinearLayout>
+
+
     </LinearLayout>
 
     <!--android:layout_height="140dp"-->
