--- a/app/src/main/res/layout-land/fragment_radio.xml
+++ b/app/src/main/res/layout-land/fragment_radio.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="60dp"
+    android:paddingTop="@dimen/padding_toolbar"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.ultim.radio5.NavigationDrawerActivity"
     android:id="@+id/main_content"
