--- a/app/src/main/res/layout/fragment_radio.xml
+++ b/app/src/main/res/layout/fragment_radio.xml
@@ -6,6 +6,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.ultim.radio5.NavigationDrawerActivity"
     android:id="@+id/main_content"
+    android:paddingTop="@dimen/padding_toolbar"
     >
 <!--    tools:showIn="@layout/app_bar_navigation_drawer"-->
     <eu.gsottbauer.equalizerview.EqualizerView
@@ -29,7 +30,6 @@
             android:layout_width="266dp"
             android:layout_height="189dp"
             android:layout_gravity="center_horizontal"
-            android:paddingTop="60dp"
             android:src="@drawable/logo_inactive" />
 
         <ImageView
