--- a/app/src/main/res/layout/activity_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_navigation_drawer.xml
@@ -43,7 +43,7 @@
 
                 <ImageView
                     android:id="@+id/settingsImageView"
-                    android:src="@mipmap/ic_settings"
+                    android:src="@drawable/ic_settings_black_24dp"
                     android:layout_height="23dp"
                     android:layout_width="23dp"/>
                 <TextView
