added default textColor for navigation theme (testTheme)

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,6 +23,7 @@
         <item name="colorAccent">#303030</item>
         <item name="colorPrimaryDark">#303030</item>
         <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#FFFFFF</item>
     </style>
 
     <style name="SwitchTheme" parent="Theme.AppCompat.Light.NoActionBar">
