--- a/equalizerview/src/main/res/drawable/gradiented_bar.xml
+++ b/equalizerview/src/main/res/drawable/gradiented_bar.xml
@@ -1,11 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <gradient
-        android:type="radial"
-        android:gradientRadius="700"
-        android:startColor="#3498DC"
-        android:endColor="#246A99">
-    </gradient>
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#EDEFEE"/>
+        </shape>
+    </item>
+
+    <item android:top="1dp">
+        <shape android:shape="rectangle">
+            <solid android:color="#9EA09F"/>
+        </shape>
+    </item>
+
+    <item android:top="2dp">
+        <shape android:shape="rectangle">
+            <gradient android:angle="270" android:startColor="#EDEFEE" android:endColor="#B1B3B2"/>
+        </shape>
+    </item>
+</layer-list>
