Change launcher icon Add text form start image Change expanse notification

--- a/app/src/main/res/layout-land/fragment_radio.xml
+++ b/app/src/main/res/layout-land/fragment_radio.xml
@@ -51,7 +51,7 @@
                 android:layout_gravity="center_horizontal"
                 android:paddingTop="20dp"
                 android:text="Исполнитель: Название трека"
-                android:textSize="16sp"
+                android:textSize="@dimen/singer_size"
                 android:theme="@style/ToolBarStyle" />
         </LinearLayout>
 
