--- a/app/src/main/res/layout-xlarge/fragment_radio.xml
+++ b/app/src/main/res/layout-xlarge/fragment_radio.xml
@@ -49,7 +49,7 @@
             android:layout_height="fill_parent"
             android:layout_gravity="center_horizontal"
             android:text="Исполнитель: Название трека"
-            android:textSize="16dp"
+            android:textSize="@dimen/singer_size"
             android:paddingTop="50dp"/>
     </LinearLayout>
 
