--- a/app/src/main/res/layout/radio_push_expanded.xml
+++ b/app/src/main/res/layout/radio_push_expanded.xml
@@ -5,40 +5,40 @@
     android:id="@+id/layout_push"
     android:layout_width="match_parent"
     android:layout_height="128dp"
+    android:gravity="center_horizontal"
     android:padding="10dp">
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:src="@drawable/push_ic"
         android:layout_alignParentTop="true"
-        android:src="@drawable/push_ic" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="11dp"
         android:layout_marginStart="11dp"
         android:layout_toRightOf="@+id/image"
+        android:gravity="center_horizontal"
         android:orientation="horizontal"
         android:weightSum="1">
 
         <LinearLayout
             android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentStart="true"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/singer"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Исполнитель"
                 android:textColor="#000"
@@ -46,7 +46,7 @@
 
             <TextView
                 android:id="@+id/song"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Композиция"
                 android:textColor="#000"
@@ -59,10 +59,12 @@
             android:id="@+id/button_close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
+            android:background="@mipmap/ic_close"
             android:layout_alignTop="@+id/button_play_push"
-            android:background="@mipmap/ic_close" />
+            android:layout_toRightOf="@+id/button_play_push"
+            android:layout_toEndOf="@+id/button_play_push"
+            android:layout_marginLeft="12dp"
+            android:layout_marginStart="12dp" />
 
         <ImageButton
             android:id="@+id/button_play_push"
