--- a/app/src/main/res/layout/activity_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_navigation_drawer.xml
@@ -32,44 +32,47 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:gravity="center_vertical"
-                android:paddingLeft="5dp">
+                android:orientation="horizontal"
+                android:paddingLeft="5dp"
+                android:visibility="gone">
 
                 <ImageView
                     android:id="@+id/settingsImageView"
-                    android:src="@drawable/ic_settings_black_24dp"
+                    android:layout_width="23dp"
                     android:layout_height="23dp"
-                    android:layout_width="23dp"/>
+                    android:src="@drawable/ic_settings_black_24dp" />
+
                 <TextView
-                    android:paddingLeft="3dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Настройки"/>
+                    android:paddingLeft="3dp"
+                    android:text="Настройки" />
             </LinearLayout>
 
             <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
+                android:orientation="horizontal"
                 android:paddingLeft="10dp"
-                android:paddingTop="5dp">
+                android:paddingTop="5dp"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/menu_network_status_item"
-                    android:text="Онлайн"
-                    android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
-                    android:paddingLeft="23dp" />
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="23dp"
+                    android:text="Онлайн" />
+
                 <Switch
-                    android:theme="@style/SwitchTheme"
                     android:id="@+id/nav_menu_switch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:textColor="#000000"
-                    />
+                    android:theme="@style/SwitchTheme" />
             </RelativeLayout>
 
             <LinearLayout
